<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_padding"
    android:paddingLeft="@dimen/activity_horizontal_padding"
    android:paddingRight="@dimen/activity_horizontal_padding"
    android:paddingTop="@dimen/activity_vertical_padding"
    tools:context=".SimpleUploadUseSaveKeyActivity" >

    <!-- Upload Token -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/block_vertical_margin"
        android:layout_marginTop="@dimen/block_vertical_margin" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/qiniu_upload_token" >
        </TextView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/select_button_selector"
            android:onClick="getUploadToken"
            android:text="@string/qiniu_get_upload_token"
            android:textColor="#fff" >
        </Button>
    </RelativeLayout>

    <TextView
        android:id="@+id/simple_upload_use_save_key_upload_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/block_vertical_margin"
        android:layout_marginTop="@dimen/block_vertical_margin"
        android:background="@color/field_textview_background"
        android:padding="@dimen/textview_padding" >
    </TextView>
    <!-- Upload File -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/block_vertical_margin"
        android:layout_marginTop="@dimen/block_vertical_margin" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/qiniu_upload_file" >
        </TextView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/select_button_selector"
            android:onClick="selectUploadFile"
            android:text="@string/qiniu_select_file"
            android:textColor="#fff" >
        </Button>
    </RelativeLayout>

    <TextView
        android:id="@+id/simple_upload_use_save_key_upload_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/block_vertical_margin"
        android:layout_marginTop="@dimen/block_vertical_margin"
        android:background="@color/field_textview_background"
        android:padding="@dimen/textview_padding" >
    </TextView>
    <!-- Upload -->

    <Button
        android:id="@+id/simple_upload_use_save_key_upload_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/block_vertical_margin"
        android:layout_marginTop="@dimen/block_vertical_margin"
        android:background="@drawable/action_button_selector"
        android:onClick="uploadFile"
        android:text="@string/qiniu_upload"
        android:textColor="#fff" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginBottom="@dimen/block_vertical_margin"
        android:layout_marginTop="@dimen/block_vertical_margin"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/simple_upload_use_save_key_log_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/log_textview_background"
            android:padding="@dimen/textview_padding" >
        </TextView>
    </ScrollView>

</LinearLayout>