<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_padding"
    android:paddingLeft="@dimen/activity_horizontal_padding"
    android:paddingRight="@dimen/activity_horizontal_padding"
    android:paddingTop="@dimen/activity_vertical_padding"
    tools:context=".SimpleUploadWithMimeTypeActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- Key -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/block_vertical_margin"
            android:layout_marginTop="@dimen/block_vertical_margin"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qiniu_file_key" />

            <EditText
                android:id="@+id/simple_upload_with_mimetype_file_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <!-- MimeType -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/block_vertical_margin"
            android:layout_marginTop="@dimen/block_vertical_margin"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qiniu_file_mimetype" />

            <EditText
                android:id="@+id/simple_upload_with_mimetype_file_mimetype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <!-- Upload Token -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/block_vertical_margin"
            android:layout_marginTop="@dimen/block_vertical_margin" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/qiniu_upload_token" >
            </TextView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/select_button_selector"
                android:onClick="getUploadToken"
                android:text="@string/qiniu_get_upload_token"
                android:textColor="#fff" >
            </Button>
        </RelativeLayout>

        <TextView
            android:id="@+id/simple_upload_with_mimetype_upload_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/block_vertical_margin"
            android:layout_marginTop="@dimen/block_vertical_margin"
            android:background="@color/field_textview_background"
            android:padding="@dimen/textview_padding" >
        </TextView>
        <!-- Upload File -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/block_vertical_margin"
            android:layout_marginTop="@dimen/block_vertical_margin" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/qiniu_upload_file" >
            </TextView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/select_button_selector"
                android:onClick="selectUploadFile"
                android:text="@string/qiniu_select_file"
                android:textColor="#fff" >
            </Button>
        </RelativeLayout>

        <TextView
            android:id="@+id/simple_upload_with_mimetype_upload_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/block_vertical_margin"
            android:layout_marginTop="@dimen/block_vertical_margin"
            android:background="@color/field_textview_background"
            android:padding="@dimen/textview_padding" >
        </TextView>

        <!-- Upload -->

        <Button
            android:id="@+id/simple_upload_with_mimetype_upload_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/block_vertical_margin"
            android:layout_marginTop="@dimen/block_vertical_margin"
            android:background="@drawable/action_button_selector"
            android:onClick="uploadFile"
            android:text="@string/qiniu_upload"
            android:textColor="#fff" />

        <LinearLayout
            android:id="@+id/simple_upload_with_mimetype_status_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/block_vertical_margin"
            android:layout_marginTop="@dimen/block_vertical_margin"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/simple_upload_with_mimetype_upload_speed_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/simple_upload_with_mimetype_upload_file_length_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/simple_upload_with_mimetype_upload_speed_textview" />

                <TextView
                    android:id="@+id/simple_upload_with_mimetype_upload_percentage_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <ProgressBar
                android:id="@+id/simple_upload_with_mimetype_upload_progressbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/simple_upload_with_mimetype_log_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/block_vertical_margin"
            android:layout_marginTop="@dimen/block_vertical_margin"
            android:background="@color/log_textview_background"
            android:padding="@dimen/textview_padding" >
        </TextView>
    </LinearLayout>

</ScrollView>